Showing popular movies (mocked data)

--- a/ViperMoviesssDB/ViperMoviesssDB/Base.lproj/Main.storyboard
+++ b/ViperMoviesssDB/ViperMoviesssDB/Base.lproj/Main.storyboard
@@ -18,79 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n1I-EB-45Q">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y8S-MA-5pa">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="QeN-OW-YPF">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QeN-OW-YPF" id="EvM-G2-ZLp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BGV-nv-eoS">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nDF-Vh-6xr">
-                                                        <size key="itemSize" width="50" height="50"/>
-                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                    </collectionViewFlowLayout>
-                                                    <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8sn-pD-KZv">
-                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                                <autoresizingMask key="autoresizingMask"/>
-                                                            </view>
-                                                        </collectionViewCell>
-                                                    </cells>
-                                                </collectionView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="BGV-nv-eoS" firstAttribute="leading" secondItem="EvM-G2-ZLp" secondAttribute="leading" id="0L9-aG-ULO"/>
-                                                <constraint firstItem="BGV-nv-eoS" firstAttribute="top" secondItem="EvM-G2-ZLp" secondAttribute="top" id="1Vy-8m-z8e"/>
-                                                <constraint firstAttribute="trailing" secondItem="BGV-nv-eoS" secondAttribute="trailing" id="5B6-TU-x0G"/>
-                                                <constraint firstAttribute="bottom" secondItem="BGV-nv-eoS" secondAttribute="bottom" id="ssc-HW-JSO"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="wek-hx-qzy">
-                                        <rect key="frame" x="0.0" y="72" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wek-hx-qzy" id="53P-9H-9zP">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w93-aT-ubV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </tableView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="w93-aT-ubV" secondAttribute="trailing" id="3a3-At-5g2"/>
-                                                <constraint firstAttribute="bottom" secondItem="w93-aT-ubV" secondAttribute="bottom" id="7AA-mt-2cH"/>
-                                                <constraint firstItem="w93-aT-ubV" firstAttribute="leading" secondItem="53P-9H-9zP" secondAttribute="leading" id="Fka-xi-4E2"/>
-                                                <constraint firstItem="w93-aT-ubV" firstAttribute="top" secondItem="53P-9H-9zP" secondAttribute="top" id="gdg-hl-Exi"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="n1I-EB-45Q" secondAttribute="trailing" id="0xa-DQ-QdT"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n1I-EB-45Q" secondAttribute="bottom" id="GrL-qS-VmG"/>
-                            <constraint firstItem="n1I-EB-45Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="L56-lB-EWN"/>
-                            <constraint firstItem="n1I-EB-45Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yts-vh-GsW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="y8S-MA-5pa" secondAttribute="bottom" id="4wC-A9-e5L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y8S-MA-5pa" secondAttribute="trailing" id="7BX-gd-tmk"/>
+                            <constraint firstItem="y8S-MA-5pa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ORf-Le-lce"/>
+                            <constraint firstItem="y8S-MA-5pa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XTm-ns-alh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="MoviesDB" largeTitleDisplayMode="always" id="Zbh-bP-WCc"/>
+                    <connections>
+                        <outlet property="tableView" destination="y8S-MA-5pa" id="tt2-en-bPm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
