--- a/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
+++ b/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
@@ -12,18 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MovieDetailsViewHeader" customModule="ViperMoviesssDB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="326" height="194"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qL5-8F-yZ0">
-                    <rect key="frame" x="0.0" y="0.0" width="326" height="194"/>
+                    <rect key="frame" x="15" y="0.0" width="311" height="194"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keym7MPn1icW1wWfzMnW3HeuzWU" translatesAutoresizingMaskIntoConstraints="NO" id="0c8-pM-JGu">
-                            <rect key="frame" x="0.0" y="0.0" width="128" height="194"/>
+                            <rect key="frame" x="0.0" y="0.0" width="113" height="194"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="DML-sB-1RJ">
-                            <rect key="frame" x="138" y="110.5" width="188" height="70.5"/>
+                            <rect key="frame" x="123" y="110.5" width="188" height="70.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fast &amp; Furious" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cek-Ep-6va">
                                     <rect key="frame" x="0.0" y="0.0" width="188" height="24"/>
@@ -91,10 +91,13 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="qL5-8F-yZ0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="AtT-mv-Mbp"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qL5-8F-yZ0" secondAttribute="trailing" id="OdA-e2-6iZ"/>
                 <constraint firstAttribute="bottom" secondItem="qL5-8F-yZ0" secondAttribute="bottom" id="Rlj-pO-diJ"/>
                 <constraint firstItem="qL5-8F-yZ0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="f31-kI-hFo"/>
+                <constraint firstItem="qL5-8F-yZ0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fAT-6e-fC0"/>
+                <constraint firstItem="qL5-8F-yZ0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="n4D-4e-F5v"/>
+                <constraint firstItem="qL5-8F-yZ0" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="n90-n9-d9Y"/>
+                <constraint firstAttribute="bottom" secondItem="qL5-8F-yZ0" secondAttribute="bottom" id="tzp-od-73f"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
